<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="Home"/>

    <item
        android:id="@+id/search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="Search"/>

    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="Maps"/>

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="Profile"/>

    <item
        android:id="@+id/experience"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_work_24"
        android:title="Skill"/>

</menu>